# AEGIS

./: .gitignore  ACHIEVEMENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUSH_INSTRUCTIONS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  quickdraw.md
.github/workflows/: ci.yml
configs/: default.yaml  phase2_swinunetr.yaml
docs/: quickstart.md
examples/: README.md
outputs/miccai2026_v4/failure_analysis/: failure_detection_report.json
outputs/miccai2026_v4/reports/: per_case_metrics.csv  resolved_config.json  summary.json
scripts/: README.md  check_data_loading.py  run_research_pipeline.py
src/: main.py
src/aegis/: __init__.py  checkpoint.py  data_loading.py  failure_detection.py  guardrails.py  mc_inference.py  monitor.py  reliability_module.py  research_pipeline.py  training.py  visualization.py
src/aegis/evaluation/: __init__.py
src/aegis/models/: __init__.py  swin_unetr.py
tests/: __init__.py  test_data_loading.py  test_guardrails.py  test_main_cli.py  test_research_pipeline.py
