[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-clinical"
version = "0.1.0"
description = "A protective shield against silent AI failures in clinical use"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "AEGIS Contributors" }
]
dependencies = [
    "numpy>=1.21.0,<3.0",
    "scipy>=1.7.0",
    "nibabel>=5.0.0",
    "monai>=1.3.0",
    "einops>=0.6.0",
    "PyYAML>=6.0.0",
    "matplotlib>=3.6.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
]
keywords = ["clinical AI", "AI safety", "guardrails", "medical AI", "MICCAI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
